--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -38,7 +38,7 @@ jobs:
         run: npm ci
 
       - name: Build docs slides
-        run: marp "slide decks/docs/slides.md" --output docs/index.html
+        run: npx marp "slide decks/docs/slides.md" --output docs/index.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
