--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
     paths: 
-      - 'slide decks/docs/**'
+      - 'slide_decks/docs/**'
       - 'style/**'
       - 'package.json'
   workflow_dispatch:
@@ -38,7 +38,7 @@ jobs:
         run: npm ci
 
       - name: Build docs slides
-        run: npx marp "slide decks/docs/slides.md" --output docs/index.html
+        run: npx marp "slide_decks/docs/slides.md" --output docs/index.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
