--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "nersc-slides",
     "version": "0.0.1",
     "scripts": {
-        "build": "marp \"slide decks/docs/slides.md\" --pdf",
-        "watch": "marp \"slide decks/docs/slides.md\" --watch --preview"
+        "build": "marp \"slide_decks/docs/slides.md\" --pdf",
+        "watch": "marp \"slide_decks/docs/slides.md\" --watch --preview"
     },
     "marp": {
         "themeSet": [
