--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     },
     "dependencies": {
         "@marp-team/marp-cli": "^4.2.3",
-        "@marp-team/marp-core": "^4.1.0"
+        "@marp-team/marp-core": "^4.1.0",
+        "canvas": "^3.1.2",
+        "qrcode": "^1.5.4"
     }
 }
